# DesignIDE

./: CMakeLists.txt  DesignIDE_Report.txt  LICENSE  imgui.ini
src/: main.cpp
src/checks/: accessibility.cpp  accessibility.h  consistency.cpp  consistency.h  handoff.cpp  handoff.h
